--- a/xiaohongshu-demo/index.html
+++ b/xiaohongshu-demo/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>Xiaohongshu Demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
+    <link rel="stylesheet" href="css1/styles.css">
 
     <!-- Allows for a responsive view -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
+    <div class="container">
+      <div class="header">
+       <h1>STAR <br>WARS <br>NEWS</h1>
 
+       <h2 class="header-menu">HOME</h2>
+       <h2 class="header-menu">PRODUCTS</h2>
+       <h2 class="header-menu">ACCOUNT</h2>
+      </div>
+    </div>
       <!-- Build your site here! -->
     <div class="container">
       <div class="masonry">
-        <div class="card-1 item">
+        <div class="card-1 item animate__animated animate__backInDown">
           <img src="images/sw-1.jpeg" alt="star-wars-group">
 
           <div class="card-1-info">
@@ -31,22 +44,22 @@
           </div>
         </div>
 
-        <div class="card-2 item">
-          <img src="images/sw-2.jpeg" alt="star-wars-cave">
-          <div class="card-2-info">
-            <div>
-              <h2>Star Wars Trip</h2>
-              <p>Would you like to travel and see where the movie was filmed? Come and check the details...</p>
-            </div>
+          <div class="card-2 item animate__animated animate__backInDown">
+            <img src="images/sw-2.jpeg" alt="star-wars-cave">
+            <div class="card-2-info">
+              <div>
+                <h2>Star Wars Trip</h2>
+                <p>Would you like to travel and see where the movie was filmed? Come and check the details...</p>
+              </div>
 
-            <div class="card-2-votes">
-              <img src='images/sw-5.jpeg' class="card-2-avatar"/>
-              <h2 class="card-2-votes"> 888 ♡</h2>
+              <div class="card-2-votes">
+                <img src='images/sw-5.jpeg' class="card-2-avatar"/>
+                <h2 class="card-2-votes"> 888 ♡</h2>
+              </div>
             </div>
           </div>
-        </div>
 
-                <div class="card-3 item">
+                <div class="card-3 item animate__animated animate__backInDown">
           <img src="images/sw-4.jpeg" alt="star-wars-cave">
           <div class="card-3-info">
             <div>
@@ -60,6 +73,54 @@
             </div>
           </div>
         </div>
+
+       <div class="card-4 item animate__animated animate__backInDown">
+          <img src="images/sw-7.jpeg" alt="star-wars-cave">
+          <div class="card-4-info">
+            <div>
+              <h2>Star Wars Trip</h2>
+              <p>Would you like to travel and see where the movie was filmed? Come and check the details...</p>
+            </div>
+
+            <div class="card-4-votes">
+              <img src='images/sw-1.jpeg' class="card-4-avatar"/>
+              <h2 class="card-4-votes"> 888 ♡</h2>
+            </div>
+          </div>
+        </div>
+
+      <div class="card-5 item animate__animated animate__backInDown">
+          <img src="images/sw-6.jpeg" alt="star-wars-cave">
+          <div class="card-5-info">
+            <div>
+              <h2>Star Wars Trip</h2>
+              <p>Would you like to travel and see where the movie was filmed? Come and check the details...</p>
+            </div>
+
+            <div class="card-5-votes">
+              <img src='images/sw-1.jpeg' class="card-5-avatar"/>
+              <h2 class="card-5-votes"> 888 ♡</h2>
+            </div>
+          </div>
+        </div>
+
+
+      <div class="card-6 item animate__animated animate__backInDown">
+          <img src="images/sw-3.jpeg" alt="star-wars-cave">
+          <div class="card-6-info">
+            <div>
+              <h2>Star Wars Trip</h2>
+              <p>Would you like to travel and see where the movie was filmed? Come and check the details...</p>
+            </div>
+
+            <div class="card-6-votes">
+              <img src='images/sw-7.jpeg' class="card-6-avatar"/>
+              <h2 class="card-6-votes"> 888 ♡</h2>
+            </div>
+          </div>
+        </div>
+
+
 
 
       </div>
