pushing first event listener

--- a/dom-events/02-My-First-Event-Listener/index.html
+++ b/dom-events/02-My-First-Event-Listener/index.html
@@ -15,10 +15,12 @@
   </style>
 </head>
 <body>
+  <div class="audiobox">
   <button id="clickme" class="btn btn-primary btn-lg">
     Click me!
   </button>
-
+    <audio id="audio" src="sound.mp3" type=audio/mpeg></audio>
+  </div>
   <script src="lib/listener.js"></script>
 </body>
 </html>
