updating LeWagon files

--- a/dom-events/03-Wagon-Race/index.html
+++ b/dom-events/03-Wagon-Race/index.html
@@ -21,14 +21,14 @@
     <td class="active"></td>
     <td></td>
     <td></td>
-    etc.
+    <!-- etc. -->
   </tr>
   <tr id="player2_race">
     <td></td>
     <td></td>
     <td></td>
     <td class="active"></td>
-    etc.
+    <!-- etc. -->
   </tr>
 </table>
     <hr>
